# WasmContinuations

./: .gitmodules  README.md  slides.key
calling_test/test_wasmtime/: Cargo.toml  hello.wasm  hello.wat  run_h.wasm  run_h.wat  run_h_inc_restore.wasm  run_h_inc_restore.wat
calling_test/test_wasmtime/src/: main.rs
go-benchmarking/: .gitignore  Dockerfile  a.out.js  a.out.wasm  a.wat  average.sh  calls.txt  docker_main.sh  experiment.R  experiment.sh  hailstone.c  hailstone.js  hailstone_c  hailstone_c_o3  hailstone_c_wasm.js  hailstone_c_wasm.wasm  hailstone_c_wasm_o3.js  hailstone_c_wasm_o3.wasm  hailstone_go  hailstone_go_wasm  hailstone_rec.c  hailstone_rec.js  hailstone_rec_c  hailstone_rec_c_o3  hailstone_rec_c_wasm.js  hailstone_rec_c_wasm.wasm  hailstone_rec_c_wasm_o3.js  hailstone_rec_go  hailstone_rec_go_wasm  hailstone_rec_toy_O.wat  hailstone_rec_toy_O_HS.wasm  hailstone_toy_O.wasm  hailstone_toy_O.wat  hailstone_toy_O_HS.wat  host_main.py  invoke_docker.sh  pi_no_thread.c  pi_no_thread.js  pi_no_thread_c  pi_no_thread_c_o3  (+19 more)
racket/: .gitignore  test.c  test.rkt
scheme/: test.c  test.ss
toy-wasm/: .gitignore  ArgParse.idr  Identifier.idr  Main.idr  Optimizer.idr  ParseUtils.idr  Parser.idr  Result.idr  TDOP.idr  Tokenizer.idr  ToyAST.idr  ToyComp.idr  ToyInterp.idr  Utils.idr  WasmAST.idr  WasmDump.idr  WasmInterp.idr  a.wasm  a.wat  hail_iter.wasm  hail_iter.wat  hail_iter_heap.wasm  hail_iter_heap.wat  test.toy  toy.ipkg  toy.wasm  toy.wat  wrapper.js
vm/: .Rhistory  .gitignore  README.md  Vagrantfile  bootstrap.sh  build.sh  install_em.sh
(+63 files in other folders)
