[package]
name = "wasmtime_call_test"
version = "0.1.0"
authors = ["Donald Pinckney <donald_pinckney@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.19"
# wasmtime = "0.15.0"
wasmtime-api = { path = "../../wasmtime/wasmtime-api" }

failure = { version = "0.1.3", default-features = false }
failure_derive = { version = "0.1.3", default-features = false }
target-lexicon = { version = "0.8.1", default-features = false }
region = "2.0.0"
hashbrown = { version = "0.6.0", optional = true }
